--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
+    "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^22.2.0",
     "@types/nodemon": "^1.19.6",
     "ts-node": "^10.9.2",
