--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
@@ -26,11 +29,14 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
+    "@types/compression": "^1.7.5",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.2.0",
     "@types/nodemon": "^1.19.6",
