--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register 'test/**/*.test.ts'",
     "start": "node dist/app.js",
     "build": "tsc",
     "dev": "nodemon"
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
+    "esm": "^3.2.25",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
@@ -29,18 +30,25 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
+    "@types/chai": "^4.3.17",
     "@types/compression": "^1.7.5",
     "@types/dotenv": "^8.2.0",
+    "@types/esm": "^3.2.2",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mocha": "^10.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.2.0",
     "@types/nodemon": "^1.19.6",
+    "@types/sinon": "^17.0.3",
     "@types/socket.io": "^3.0.2",
+    "chai": "^4.5.0",
+    "mocha": "^10.7.3",
+    "sinon": "^18.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
